2010-10-03  Dan Nicolaescu  <dann@ics.uci.edu>

	Make 'g' (AKA revert-buffer) rerun the VC log, log-incoming and
	log-outgoing commands.
	* vc/vc.el (vc-log-internal-common): Add a new argument and use it
	to create a buffer local revert-buffer-function variable.
	(vc-print-log-internal, vc-log-incoming, vc-log-outgoing): Pass a
	revert-buffer-function lambda.

2010-10-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/gnutls.el (starttls-negotiate): Use the plist interface to
	`gnutls-boot'.  Make TYPE the only required parameter.  Allow
	TRUSTFILES and KEYFILES to be lists.
	(open-ssl-stream): Use it.

2010-10-03  Glenn Morris  <rgm@gnu.org>

	* subr.el (directory-sep-char): Remove obsolete variable.
	* net/tramp-compat.el: Don't mess about with the byte-compiler unless
	it is "necessary".

	* vc/vc-hooks.el (vc-header-alist): Remove obsolete variable.
	* vc/vc.el (vc-static-header-alist): Doc fix.
	* vc/vc-cvs.el (vc-cvs-header):
	* vc/vc-rcs.el (vc-rcs-header):
	* vc/vc-sccs.el (vc-sccs-header):
	* vc/vc-svn.el (vc-svn-header): Do not consult vc-header-alist.
	* obsolete/vc-mcvs.el (vc-mcvs-header):
	* progmodes/cperl-mode.el (cperl-mode): Only set vc-header-alist
	on XEmacs.

2010-10-03  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/bytecomp.el (byte-compile-from-buffer): Remove
	obsolete use of binary-overwrite-mode (Bug#7001).

2010-10-03  Glenn Morris  <rgm@gnu.org>

	* obsolete/x-menu.el: Remove file, obsolete since 21.1

	* textmodes/rst.el (rst-font-lock-keywords-function):
	Drop Emacs 20 code.

	* textmodes/artist.el (artist-replace-char): Drop Emacs 20 code.

	* printing.el: Drop Emacs 20 code.

	* calendar/appt.el (appt-delete): Don't autoload it (you can't use it
	without having used appt.el already).

	* subr.el (make-local-hook): Remove function obsolete since 21.1.
	* progmodes/cc-mode.el (make-local-hook): Don't do cc-bytecomp stuff.
	(c-basic-common-init, c-font-lock-init): Only call make-local-hook on
	XEmacs.